Another attempt to fix position on mobile

--- a/_sass/_loadingOverlay.scss
+++ b/_sass/_loadingOverlay.scss
@@ -1,8 +1,3 @@
-#loadingOverlay {
-    z-index: 999;
-    background-color: black;
-}
-
 [data-loader]
 {
     margin: 8px;
